Wed Sep 23 19:11:44 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/Download.html:

          Updated links to viewvc to point to Doug's webspace working copy
          instead. 
        
Wed Sep 23 14:15:58 UTC 2009  Olli Savia  <ops@iki.fi>

        * configure.ac:
          Changed ACE_CHECK_HAS_FUNCS(snprintf) to
          ACE_CHECK_LACKS_FUNCS(vsnprintf)

Tue Sep 22 17:05:56 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Timer_Wheel_T.cpp (open_i): Changed

          this->wheel_time_.msec (1 << (this->res_bits_ + this->spoke_bits_));

          to

          this->wheel_time_.msec (1 << (this->res_bits_));

          so recalc_earliest selects the right spoke as earliest_spoke_.
          Thanks to Koh Onishi <k_onishi at mtj dot biglobe dot ne dot jp>
          for reporting this.

Mon Sep 21 20:27:06 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
        * ace/config-openbsd.h:
          Added ACE_HAS_SIGSUSPEND.

Mon Sep 21 10:53:16 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
        * ace/OS_NS_signal.inl:
          Another set of sigset related fixes.

Mon Sep 21 07:31:25 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.cpp:
          Integrated patch from Bugzilla Bug #3424.

Sun Sep 20 18:02:57 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Added ACE_HAS_SIGSUSPEND.

Sun Sep 20 17:46:31 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-macosx-leopard.h:
        * ace/config-macosx-panther.h:
        * ace/config-macosx-tiger.h:
        * ace/config-macosx.h:
        * ace/config-openbsd.h:
          Removed ACE_LACKS_SIGSET.

Sat Sep 19 21:23:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.inl:
          Fix typo.

Sat Sep 19 12:12:23 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_signal.h:
        * ace/OS_NS_signal.inl:
          Fix for platforms which implement sigsuspend as macro.
