@@ -1,10 +1,15 @@
+Fri Sep 25 12:06:11 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * ace/config-openbsd.h:
+          Reorganised file and added a lot of new defines.
+
 Wed Sep 23 19:11:44 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * docs/Download.html:
 
           Updated links to viewvc to point to Doug's webspace working copy
-          instead. 
-        
+          instead.
+
 Wed Sep 23 14:15:58 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * configure.ac:
